    Windows. (Chris Nauroth via suresh)

    HADOOP-9526. TestShellCommandFencer and TestShell fail on Windows.
    (Arpit Agarwal via suresh)

    HADOOP-8982. TestSocketIOWithTimeout fails on Windows.
    (Chris Nauroth via suresh)

    HADOOP-9599. hadoop-config.cmd doesn't set JAVA_LIBRARY_PATH correctly.
    (Mostafa Elhemali via ivanmi)

Release 2.0.5-alpha - 06/06/2013

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

  HADOOP-9407. commons-daemon 1.0.3 dependency has bad group id causing
  build issues. (Sangjin Lee via suresh)

Release 2.0.4-alpha - 2013-04-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9467. Metrics2 record filter should check name as well as tags.
    (Chris Nauroth and Ganeshan Iyler via llu)

    HADOOP-9406. hadoop-client leaks dependency on JDK tools jar. (tucu)

    HADOOP-9301. hadoop client servlet/jsp/jetty/tomcat JARs creating
    conflicts in Oozie & HttpFS. (tucu)

    HADOOP-9299.  kerberos name resolution is kicking in even when kerberos
    is not configured (daryn)

    HADOOP-9408. misleading description for net.topology.table.file.name
    property in core-default.xml. (rajeshbabu via suresh)

    HADOOP-9444. Modify hadoop-policy.xml to replace unexpanded variables to a
    default value of '*'. (Roman Shaposhnik via vinodkv)

    HADOOP-9471. hadoop-client wrongfully excludes jetty-util JAR, 
    breaking webhdfs. (tucu)

Release 2.0.3-alpha - 2013-02-06 

  INCOMPATIBLE CHANGES

    HADOOP-8999. SASL negotiation is flawed (daryn)

  NEW FEATURES

    HADOOP-8597. Permit FsShell's text command to read Avro files.
    (Ivan Vladimirov Ivanov via cutting)

    HADOOP-9020. Add a SASL PLAIN server (daryn via bobby)

    HADOOP-9090. Support on-demand publish of metrics. (Mostafa Elhemali via
    suresh)

    HADOOP-9054. Add AuthenticationHandler that uses Kerberos but allows for 