@@ -1211,6 +1211,80 @@ operator|=
 name|mode
 expr_stmt|;
 block|}
+DECL|method|Stat (String owner, String group, int mode)
+name|Stat
+parameter_list|(
+name|String
+name|owner
+parameter_list|,
+name|String
+name|group
+parameter_list|,
+name|int
+name|mode
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|Shell
+operator|.
+name|WINDOWS
+condition|)
+block|{
+name|this
+operator|.
+name|owner
+operator|=
+name|owner
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|owner
+operator|=
+name|stripDomain
+argument_list|(
+name|owner
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|Shell
+operator|.
+name|WINDOWS
+condition|)
+block|{
+name|this
+operator|.
+name|group
+operator|=
+name|group
+expr_stmt|;
+block|}
+else|else
+block|{
+name|this
+operator|.
+name|group
+operator|=
+name|stripDomain
+argument_list|(
+name|group
+argument_list|)
+expr_stmt|;
+block|}
+name|this
+operator|.
+name|mode
+operator|=
+name|mode
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 DECL|method|toString ()
@@ -1284,11 +1358,23 @@ block|{
 name|Stat
 name|stat
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|Shell
+operator|.
+name|WINDOWS
+condition|)
+block|{
+name|stat
+operator|=
 name|fstat
 argument_list|(
 name|fd
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|stat
 operator|.
 name|owner
@@ -1319,6 +1405,85 @@ operator|.
 name|groupId
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+try|try
+block|{
+name|stat
+operator|=
+name|fstat
+argument_list|(
+name|fd
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NativeIOException
+name|nioe
+parameter_list|)
+block|{
+if|if
+condition|(
+name|nioe
+operator|.
+name|getErrorCode
+argument_list|()
+operator|==
+literal|6
+condition|)
+block|{
+throw|throw
+operator|new
+name|NativeIOException
+argument_list|(
+literal|"The handle is invalid."
+argument_list|,
+name|Errno
+operator|.
+name|EBADF
+argument_list|)
+throw|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+name|String
+operator|.
+name|format
+argument_list|(
+literal|"NativeIO.getFstat error (%d): %s"
+argument_list|,
+name|nioe
+operator|.
+name|getErrorCode
+argument_list|()
+argument_list|,
+name|nioe
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|NativeIOException
+argument_list|(
+literal|"Unknown error"
+argument_list|,
+name|Errno
+operator|.
+name|UNKNOWN
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
 return|return
 name|stat
 return|;
@@ -2110,6 +2275,49 @@ name|initialized
 init|=
 literal|false
 decl_stmt|;
+comment|/**    * The Windows logon name has two part, NetBIOS domain name and    * user account name, of the format DOMAIN\UserName. This method    * will remove the domain part of the full logon name.    *    * @param the full principal name containing the domain    * @return name with domain removed    */
+DECL|method|stripDomain (String name)
+specifier|private
+specifier|static
+name|String
+name|stripDomain
+parameter_list|(
+name|String
+name|name
+parameter_list|)
+block|{
+name|int
+name|i
+init|=
+name|name
+operator|.
+name|indexOf
+argument_list|(
+literal|'\\'
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|i
+operator|!=
+operator|-
+literal|1
+condition|)
+name|name
+operator|=
+name|name
+operator|.
+name|substring
+argument_list|(
+name|i
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+return|return
+name|name
+return|;
+block|}
 DECL|method|getOwner (FileDescriptor fd)
 specifier|public
 specifier|static
@@ -2142,32 +2350,11 @@ argument_list|(
 name|fd
 argument_list|)
 decl_stmt|;
-name|int
-name|i
-init|=
-name|owner
-operator|.
-name|indexOf
-argument_list|(
-literal|'\\'
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|i
-operator|!=
-operator|-
-literal|1
-condition|)
 name|owner
 operator|=
-name|owner
-operator|.
-name|substring
+name|stripDomain
 argument_list|(
-name|i
-operator|+
-literal|1
+name|owner
 argument_list|)
 expr_stmt|;
 return|return
