@@ -561,22 +561,11 @@ static BOOL ConvertActionsToMask(__in LPCWSTR path,
 {
   MODE_CHANGE_ACTION const *curr = NULL;
 
-  BY_HANDLE_FILE_INFORMATION fileInformation;
   DWORD dwErrorCode = ERROR_SUCCESS;
 
   INT mode = 0;
 
-  dwErrorCode = GetFileInformationByName(path, FALSE, &fileInformation);
-  if (dwErrorCode != ERROR_SUCCESS)
-  {
-    ReportErrorCode(L"GetFileInformationByName", dwErrorCode);
-    return FALSE;
-  }
-  if (IsDirFileInfo(&fileInformation))
-  {
-    mode |= UX_DIRECTORY;
-  }
-  dwErrorCode = FindFileOwnerAndPermission(path, NULL, NULL, &mode);
+  dwErrorCode = FindFileOwnerAndPermission(path, FALSE, NULL, NULL, &mode);
   if (dwErrorCode != ERROR_SUCCESS)
   {
     ReportErrorCode(L"FindFileOwnerAndPermission", dwErrorCode);
