@@ -118,6 +118,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -298,6 +308,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|NativeCodeLoader
@@ -411,15 +435,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|Path
-operator|.
-name|WINDOWS
-condition|)
-block|{
-return|return;
-block|}
 name|FileOutputStream
 name|fos
 init|=
@@ -473,19 +488,76 @@ name|stat
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|assertEquals
-argument_list|(
+name|String
+name|owner
+init|=
+name|stat
+operator|.
+name|getOwner
+argument_list|()
+decl_stmt|;
+name|String
+name|expectedOwner
+init|=
 name|System
 operator|.
 name|getProperty
 argument_list|(
 literal|"user.name"
 argument_list|)
-argument_list|,
-name|stat
+decl_stmt|;
+if|if
+condition|(
+name|Path
 operator|.
-name|getOwner
+name|WINDOWS
+condition|)
+block|{
+name|UserGroupInformation
+name|ugi
+init|=
+name|UserGroupInformation
+operator|.
+name|createRemoteUser
+argument_list|(
+name|expectedOwner
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|adminsGroupString
+init|=
+literal|"Administrators"
+decl_stmt|;
+if|if
+condition|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ugi
+operator|.
+name|getGroupNames
 argument_list|()
+argument_list|)
+operator|.
+name|contains
+argument_list|(
+name|adminsGroupString
+argument_list|)
+condition|)
+block|{
+name|expectedOwner
+operator|=
+name|adminsGroupString
+expr_stmt|;
+block|}
+block|}
+name|assertEquals
+argument_list|(
+name|expectedOwner
+argument_list|,
+name|owner
 argument_list|)
 expr_stmt|;
 name|assertNotNull
@@ -822,15 +894,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|Path
-operator|.
-name|WINDOWS
-condition|)
-block|{
-return|return;
-block|}
 name|FileOutputStream
 name|fos
 init|=
